# config-files-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-push.yml
app/: main.py
app/api/routes/: configs.py
app/core/: config.py  security.py
app/services/: storage.py
configs/v1/: example.yaml
scripts/: smoke_test.py
